@@ -14,6 +14,7 @@
 /config.cache
 /mpg123-*.tar.*
 /libmpg123.pc
+/libmpg123_large.pc
 /mpg123.spec
 /unix2dos
 /unix2dos.c
