@@ -46,11 +46,25 @@ Run
 
 for a list of possible parameters you can specify. The obvious are --prefix and the normal GNU autotool bunch, but others include what audio subsystem to use and what CPU optimizations to build in.
 For the optimizations (decoder choice), the default on 32bit x86 systems since version 0.66 is a build that combines all possible optimizations and chooses one at runtime (see --cpu, --list-cpu and --test-cpu parameters).
-Update: x86 build includes all but i586_dither, which is a bit bigger due to the dither noise; use x86_dither to get it into the bunch, too.
 
-Another posibly important choice is --with-seektable=<number> for setting the size for the table of stored frame addresses to make seeking faster. When you want a minimal memory footprint, you can set number to 0. Seeking will always start from the beginning, then - being accurate, but rather slow, what doesn't matter if you don't use interactive seeking forth and back.
+Another possibly important choice is --with-seektable=<number> for setting the size for the table of stored frame addresses to make seeking faster. When you want a minimal memory footprint, you can set number to 0. Seeking will always start from the beginning, then - being accurate, but rather slow, what doesn't matter if you don't use interactive seeking forth and back.
 
 There are various library features you can leave out via --disable options (like output formats, resampling modes). Please note that this is only configured/tested for the generic (fpu) decoder, not optimized ones. Perhaps that changes in future.
+
+1a. Large file support
+
+The libmpg123 API includes the generic off_t type for file offsets and thus is subject to shape-shifting on systems that change off_t depending on build flags.
+To deal with the incompatibilities that can cause, depending on your build configuration, the library name will change when large file support is enabled.
+
+Generally, you can use ./configure --disable-large file to force a build with default (small) file support and the resulting library will be called libmpg123 (same for the pkg-config package name).
+Auto detection of large file support that can be enabled (via _FILE_OFFSET_BITS) optionally on your platform will result in a build that supports large files and uses the appropriate extended API of the system libc.
+Since this build will have a different ABI from the "default" one, the library changes its name to reflect that (on 32 bit systems wiht 64 bit large file support, the library will be called libmpg123_64). To prevent further possible damage by mis-linking, the symbols sensitive to relevant I/O calls get a _64 suffix appended, too.
+
+The mpg123 header uses the value of _FILE_OFFSET_BITS to determine which set of symbols shall be used in a client application -- it is the client build system's responsibility to define _FILE_OFFSET_BITS and link to the correct variant of libmpg123.
+
+Hint: If you want to install both variants of the library, do a main build with support for large files and install that. Then, do a build without large file support and install to some DESTDIR, then only adding the library files (.la, .so, .a) and pkg-config file to the main install.
+There is no benefit from installing the non-large-file mpg123 end-user binary.
+Also, the header will work for both libs.
 
 
 2. The classic way via the provided Makefile
@@ -59,6 +73,7 @@ No, the Makefile is not provided anymore. Even if autotools is complicated, it i
 You can dig in SVN for MakeLegacy.sh and src/Makefile.legacy and src/config.h.legacy, if you want.
 
 Again, to be clear: There is no classic way anymore.
+
 
 3. Do something different on a special platform/compiler/...
 
